<?xml version="1.0"?>
<resources>
    <string name="app_name">Meetings Timer</string>
    <string name="menu_share">Share</string>
    <string name="share_replies">Total Replies:</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_translate">Translate</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_settings">Settings</string>
    <string name="feedback">Do you like the latest update? What would you improve?</string>
    <string name="welcome">Welcome!</string>
    <string name="redesign">Things changed a bit! You can now tap the cards to start/stop the timing. Enjoy it!</string>
    <string name="learn">Tap to Start/Stop!</string>
    <string name="learn2">Long press to add a reply!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="eb">Congregation Bible Study</string>
    <string name="eb_short">Bible Study</string>
    <string name="tms">Theocratic Ministry School</string>
    <string name="reading">Bible Reading</string>
    <string name="reading_puntos">Highlights</string>
    <string name="reading_reply">Reply</string>
    <string name="n1">No. 1</string>
    <string name="n2">No. 2</string>
    <string name="n3">No. 3</string>
    <string name="rs">Service Meeting</string>
    <string name="rs1">Part 1</string>
    <string name="rs2">Part 2</string>
    <string name="rs3">Part 3</string>
    <string name="rs4">Part 4</string>
    <string name="toast">App is going to background. It continues working but can be closed without your confirmation.</string>
    <string name="about_donations">PayPal donations do not grant any upgrade or improvement, they just support the work of the developer. As it doesn\'t grant any upgrade, it\'s not considered a purchase and the App remains full-functional without donating.</string>
</resources>
