<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.sferadev.meetings.timer.MainActivity" >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="always" 
        android:icon="@drawable/bshare" 
        android:title="@string/menu_share"/>
    
    <item
        android:id="@+id/action_donate"
        android:orderInCategory="100"
        android:showAsAction="always" 
        android:title="@string/menu_donate"/>
    
    <item
        android:id="@+id/action_translate"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/menu_translate"/>
    
    <item
        android:id="@+id/action_feedback"
        android:showAsAction="never"
        android:title="@string/menu_feedback"/>
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>
