<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="6dp" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100" >

        <ImageView
            android:id="@+id/stripe"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@color/red"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/color_stripe"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_weight="90"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/title"
                    android:textColor="#33B6EA"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="48dip"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="3"
                    android:text="@string/desc"
                    android:textSize="@dimen/text_smaller" />

            </LinearLayout>

            <TextView
                android:id="@+id/chrono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:freezesText="true"
                android:gravity="right"
                android:text="Start"
                android:textSize="@dimen/text_big" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>